--- a/less/topic.less
+++ b/less/topic.less
@@ -73,9 +73,9 @@
 
 			> a > .status {
 				position: absolute;
-				right: 12px;
+				right: 8px;
 				font-size: 12px;
-				top: -15px;
+				top: 3px;
 				font-size: 16px;
 			}
 
@@ -154,7 +154,6 @@
 	.content {
 		margin-top: 20px;
 		padding-bottom: 1px;
-		margin-left: 15px;
 		word-wrap: break-word;
 		overflow: hidden;
 	}
@@ -227,14 +226,46 @@
 
 	.user-info {
 		padding-left: 16px;
+		width: 200px;
+
+		.permalink {
+			text-decoration: none;
+		}
+	}
+
+	.username {
+		font-weight: 700;
+	}
+
+	.username-info {
+		margin-top: -4px;
+	}
+
+	.vote-col {
+		margin-top: -10px;
+	}
+
+	.content-info {
+		margin-top: 0;
+		padding-left: 19px;
+		min-height: 40px;
+		max-width: 850px;
+	}
+
+	@media (max-width: @screen-lg-min) {
+		.content-info {
+			max-width: 660px;
+		}
 	}
 
 	.action-info {
 		padding-top: 10px;
+		padding-left: 20px;
 	}
 
 	.vote-buttons {
 		text-align: center;
+		padding-left: 5px;
 
 		.vote-button {
 			font-size: 300%;
@@ -248,8 +279,13 @@
 		}
 	}
 
-	.vote-col {
+	.vtop {
 		vertical-align: top;
+	}
+
+	.date-info {
+		text-align: left;
+		padding-bottom: 5px;
 	}
 
 	.content-col {
@@ -257,10 +293,24 @@
 		vertical-align: top;
 	}
 
+	table {
+		.fw {
+			width: 100%;
+		}
+
+		.label {
+			font-weight: normal;
+		}
+	}
+
 	@media (max-width: @screen-sm-max) {
 		.content {
 			margin-top: 7px;
 			min-height: 59px;
+		}
+
+		.username-info {
+			margin-top: -6px;
 		}
 
 		.post-signature {
@@ -270,10 +320,10 @@
 		.posts .icon {
 			min-width: 0;
 			min-height: 0;
-			margin-top: -3px;
+			margin-top: 0;
 
 			img, .user-icon {
-				.user-icon-style(23px, 1.3rem, 50%);
+				.user-icon-style(32px, 1.3rem, 50%);
 				border-radius: 0;
 			}
 		}
@@ -281,9 +331,8 @@
 		.posts {
 			.icon {
 				> a > .status {
-					right: 14px;
+					right: 9px;
 					font-size: 12px;
-					top: -2px;
 
 				}
 			}
