Fix style issues.

--- a/less/topic.less
+++ b/less/topic.less
@@ -249,12 +249,12 @@
 		margin-top: 0;
 		padding-left: 19px;
 		min-height: 40px;
-		max-width: 850px;
+		width: 850px;
 	}
 
 	@media (max-width: @screen-lg-min) {
 		.content-info {
-			max-width: 660px;
+			width: 660px;
 		}
 	}
 
