--- a/less/style.less
+++ b/less/style.less
@@ -17,6 +17,12 @@ body {
 	}
 }
 
+@media (min-width: @screen-lg-min) {
+	.container {
+		width: 970px;
+	}
+}
+
 button, a {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
