--- a/less/topic.less
+++ b/less/topic.less
@@ -73,16 +73,15 @@
 
 			> a > .status {
 				position: absolute;
-				right: 8px;
+				right: 6px;
 				font-size: 12px;
-				top: 3px;
+				top: -14px;
 				font-size: 16px;
 			}
 
 			img, .user-icon {
-				margin-right: 15px;
+				margin-right: 5px;
 				.user-icon-style(46px, 2.4rem, 50%);
-				border-radius: 0;
 			}
 		}
 
@@ -152,8 +151,7 @@
 	}
 
 	.content {
-		margin-top: 20px;
-		padding-bottom: 1px;
+		margin-top: 7px;
 		word-wrap: break-word;
 		overflow: hidden;
 	}
@@ -225,90 +223,76 @@
 	}
 
 	.user-info {
-		padding-left: 16px;
-		padding-top: 10px;
-		width: 200px;
-
-		.permalink {
-			text-decoration: none;
-		}
+		display: inline-block;
+		vertical-align: top;
 	}
 
 	.username {
 		font-weight: 700;
 	}
 
-	.username-info {
-		margin-top: -4px;
-	}
-
-	.content-info {
-		margin-top: 0;
-		padding-left: 19px;
-		width: 100%;
-	}
-
-	.reply-box {
-		width: 100%;
-		vertical-align: top;
-		text-align: right;
-		padding-top: 10px;
-		padding-right: 5px;
-	}
-
 	.action-info {
 		padding-top: 10px;
-		padding-left: 10px;
+	}
+
+	.no-space {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+
+	.with-space {
+		margin-top: 20px;
+		margin-bottom: 20px;
+
+		@media (max-width: @screen-xs-max) {
+			padding-right: 15px;
+		}
 	}
 
 	.vote-buttons {
+		position: absolute;
 		text-align: center;
-		padding-left: 5px;
+		width: 60px;
+		background-color: #fafafb;
+		height: 100%;
 
 		.vote-button {
-			font-size: 300%;
+			font-size: 35px;
 			cursor: pointer;
 		}
 
 		.vote-count {
-			font-size: 200%;
+			font-size: 20px;
 			margin-top: -6px;
 			margin-bottom: -6px;
 		}
 	}
 
-	.vtop {
-		vertical-align: top;
+	.avatar-meta {
+		margin-top: -7px;
 	}
 
-	.date-info {
-		text-align: left;
-		padding-bottom: 5px;
+	.post-body {
+		position: relative;
 	}
 
-	.content-col {
-		width: 100%;
-		vertical-align: top;
+	.answer {
+		padding: 20px 15px;
+		margin-left: 60px;
 	}
 
-	table {
-		.fw {
-			width: 100%;
-			margin-left: 12px;
-		}
+	@media (max-width: @screen-xs-max) {
+		padding-left: 0;
+		padding-right: 0;
 
-		.label {
-			font-weight: normal;
+		.breadcrumb {
+			padding-left: 15px;
 		}
 	}
 
 	@media (max-width: @screen-sm-max) {
 		.content {
 			margin-top: 7px;
-		}
-
-		.username-info {
-			margin-top: -6px;
 		}
 
 		.post-signature {
@@ -322,14 +306,14 @@
 
 			img, .user-icon {
 				.user-icon-style(32px, 1.3rem, 50%);
-				border-radius: 0;
 			}
 		}
 
 		.posts {
 			.icon {
 				> a > .status {
-					right: 9px;
+					right: 7px;
+					top: -5px;
 					font-size: 12px;
 
 				}
@@ -353,21 +337,8 @@
 		list-style-type: none;
 		padding: 0;
 
-		table {
-			.vote-col {
-				margin-top: -10px;
-			}
-
-			@media (max-width: @screen-sm-max) {
-				.vote-col {
-					margin-top: 0;
-				}
-			}
-		}
-
 		> li {
 			position: relative;
-			padding-top: 1px;
 
 			.edit-icon {
 				vertical-align: -2%;
