--- a/less/topic.less
+++ b/less/topic.less
@@ -81,15 +81,11 @@
 
 			img, .user-icon {
 				margin-right: 5px;
-				.user-icon-style(46px, 2.4rem, 50%);
+				.user-icon-style(40px, 2.4rem, 50%);
 			}
 
 			.user-img + i.status {
-				top: -30px;
-
-				@media (max-width: @screen-sm-max) {
-					top: -18px;
-				}
+				top: -26px;
 			}
 		}
 
@@ -235,6 +231,15 @@
 		vertical-align: top;
 	}
 
+	.date-info {
+		padding-top: 10px;
+	}
+
+	.reputation-info {
+		font-size: 12px;
+		color: #999;
+	}
+
 	.username {
 		font-weight: 700;
 	}
@@ -245,6 +250,7 @@
 
 	.action-info {
 		padding-top: 10px;
+		text-align: right;
 	}
 
 	.no-space {
@@ -310,28 +316,6 @@
 		.post-signature {
 			margin-left: 0px;
 		}
-
-		.posts .icon {
-			min-width: 0;
-			min-height: 0;
-			margin-top: 0;
-
-			img, .user-icon {
-				.user-icon-style(32px, 1.3rem, 50%);
-			}
-		}
-
-		.posts {
-			.icon {
-				> a > .status {
-					right: 7px;
-					top: -5px;
-					font-size: 12px;
-
-				}
-			}
-		}
-
 	}
 }
 
